Fix a crash when opening an ORA file

One paint device cannot belong to two different images. When one
of the images is destroyed, the default bounds link of the paint device
is destroyed.

BUG:457688